--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,23 @@
             class="flex space-x-4 items-center m-1.5 p-1.5"
           >
             <img
-              class="h-6 w-auto"
+              class="h-12 w-auto"
               src="../assets/logo-tododile.png"
               alt="ToDoDile"
             />
-            <h1 class="text-emerald-600 font-bold text-xl">ToDoDile</h1>
+            <div class="flex flex-col items-start spacing-y-0">
+              <h1 class="text-emerald-600 font-bold text-xl">ToDoDile</h1>
+              <p id="username" class="text-emerald-800 font-light">Welcome!</p>
+            </div>
           </a>
         </div>
         <div class="flex">
-          <h2 id="username" class="text-emerald-600 font-bold text-xl">
-            Welcome!
-          </h2>
+          <button
+            class="bg-emerald-600 text-white hover:bg-emerald-800 px-6 py-2 cursor-pointer"
+            id="logOutBtn"
+          >
+            Logout
+          </button>
         </div>
       </nav>
     </header>
@@ -59,7 +65,7 @@
             />
             <button
               type="submit"
-              class="bg-emerald-600 text-white py-2 px-4 hover:bg-emerald-700 transition"
+              class="bg-emerald-600 text-white py-2 px-4 hover:bg-emerald-700 transition cursor-pointer"
             >
               Add Task
             </button>
