--- a/src/index.html
+++ b/src/index.html
@@ -19,24 +19,28 @@
         aria-label="Global"
       >
         <div class="flex lg:flex-1">
-          <a
-            href="./index.html"
-            class="flex space-x-4 items-center m-1.5 p-1.5"
-          >
+          <a href="./" class="flex space-x-4 items-center m-1.5 p-1.5">
             <img
-              class="h-12 w-auto"
+              class="h-8 lg:h-12 w-auto"
               src="../assets/logo-tododile.png"
               alt="ToDoDile"
             />
             <div class="flex flex-col items-start spacing-y-0">
-              <h1 class="text-emerald-600 font-bold text-xl">ToDoDile</h1>
-              <p id="username" class="text-emerald-800 font-light">Welcome!</p>
+              <h1 class="text-emerald-600 font-bold text-md lg:text-xl">
+                ToDoDile
+              </h1>
+              <p
+                id="username"
+                class="text-emerald-800 font-light text-xs lg:text-lg"
+              >
+                Welcome!
+              </p>
             </div>
           </a>
         </div>
         <div class="flex">
           <button
-            class="bg-emerald-600 text-white hover:bg-emerald-700 px-6 py-2 cursor-pointer"
+            class="bg-emerald-600 text-white hover:bg-emerald-700 px-6 py-2 cursor-pointer text-xs lg:text-base"
             id="logOutBtn"
           >
             Logout
@@ -46,7 +50,7 @@
     </header>
     <!-- Main -->
     <main
-      class="mx-auto flex flex-col max-w-7xl items-center w-full p-4 lg:px-8"
+      class="mx-auto flex flex-col max-w-7xl items-center w-full space-y-4 p-4 lg:px-8"
       aria-label="Global"
     >
       <!-- Add Task -->
@@ -59,13 +63,13 @@
             <input
               type="text"
               name="task"
-              class="flex-grow px-4 py-2 border-2 border-emerald-500 focus:outline-none focus:border-emerald-600"
+              class="flex-grow px-4 py-2 border-2 border-emerald-500 focus:outline-none focus:border-emerald-600 text-xs lg:text-base"
               placeholder="Add a new task"
               required
             />
             <button
               type="submit"
-              class="bg-emerald-600 text-white py-2 px-4 hover:bg-emerald-700 transition cursor-pointer"
+              class="bg-emerald-600 text-white py-2 px-4 hover:bg-emerald-700 transition cursor-pointer text-xs lg:text-base"
             >
               Add Task
             </button>
@@ -73,10 +77,12 @@
         </form>
       </div>
 
-      <div
-        id="todoListContainer"
-        class="mx-auto flex-col item centered w-full space-y-4 py-4 lg:py-8"
-      ></div>
+      <div class="border-2 border-emerald-500 mx-auto w-full p-4">
+        <div
+          id="todoListContainer"
+          class="flex-col item centered w-full space-y-4"
+        ></div>
+      </div>
     </main>
   </body>
 </html>
