--- a/src/login.html
+++ b/src/login.html
@@ -13,28 +13,30 @@
     class="font-mono absolute inset-0 h-full w-full bg-white bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:24px_24px]"
   >
     <main
-      class="mx-auto flex flex-row justify-center max-w-7xl items-center w-full h-full"
+      class="mx-auto flex flex-row justify-center max-w-7xl items-center w-full h-full px-4 sm:px-6 lg:px-8"
     >
       <div
-        class="bg-white border-4 border-emerald-600 shadow-xl p-6 w-full max-w-md"
+        class="bg-white border-4 border-emerald-600 shadow-xl p-3 sm:p-6 w-full max-w-md mx-auto"
       >
-        <h2 class="text-xl font-semibold mb-4">Welcome to ToDoDile!</h2>
+        <h2 class="text-lg sm:text-xl font-semibold mb-3 sm:mb-4">
+          Welcome to ToDoDile!
+        </h2>
         <form>
-          <div class="mb-4">
-            <label class="block text-sm font-medium mb-1"
+          <div class="mb-3 sm:mb-4">
+            <label class="block text-xs sm:text-sm font-medium mb-1"
               >Type in your username</label
             >
             <input
               type="text"
               name="username"
-              class="w-full px-4 py-2 border-2 border-emerald-500 focus:outline-none focus:border-emerald-600"
+              class="w-full px-3 sm:px-4 py-2 border-2 border-emerald-500 focus:outline-none focus:border-emerald-600 text-sm sm:text-base"
               placeholder="username"
               required
             />
           </div>
           <button
             type="submit"
-            class="w-full bg-emerald-600 text-white py-2 hover:bg-emerald-700 transition"
+            class="w-full bg-emerald-600 text-white py-2 hover:bg-emerald-700 transition text-sm sm:text-base"
           >
             Let's get started!
           </button>
